--- a/css/style.css
+++ b/css/style.css
@@ -318,7 +318,6 @@ input[type="radio"].visually-hidden{
 .services {
 	background-color: #f4f7f9;
 	margin-bottom: 75px;
-	position: relative;
 }
 
 .services h2 {
@@ -345,13 +344,14 @@ input[type="radio"].visually-hidden{
 
 .services-wrapper {
 	display: flex;
+	position: relative;
 } 
 
 .services-list::before {
 	content: "";
 	position: absolute;
-	top: 190px;
-	left: 520px;
+	top: 21px;
+	left: 230px;
 	width: 10px;
 	height: 280px;
 	background-image: url("../img/divider.png");
@@ -636,54 +636,52 @@ input[type="radio"].visually-hidden{
 
 /*         //////////     Модальное окно    //////////    */
 
-
-
-
 .modal {
-  position: fixed;
-  background-color: #ffffff;
- 
+	position: fixed;
+	background-color: #ffffff;
 }
 
 .modal-letter {
 	width: 620px;
-	top: 15px;
+	bottom: 200px;
 	left: 50%;
 	margin-left: -310px;
 	display: flex;
 	flex-direction: column;
 	box-shadow: 0px 20px 40px 0 rgba(0, 0, 0, 0.75);
+	/* display: none; */
 }
 
 .modal-close {
+	position: absolute;
+	top: 9px;
+	right: 9px;
 	font-size: 0;
-	align-self: flex-end;
 	width: 22px;
 	height: 22px;
-	background-color: #ffffff;
+	background-color: transparent;
 	cursor: pointer;
 	padding: 15px 15px;
-	/* margin-right: 10px; */
 	border: 0;
 }
 
 .modal-close::before,
 .modal-close::after {
-  content: "";
-  position: absolute;
-  top: 15px;
-  right: 6px;
-  width: 28px;
-  height: 5px;
-  background-color: #EF3341;
+	content: "";
+	position: absolute;
+	top: 13px;
+	right: 1px;
+	width: 28px;
+	height: 5px;
+	background-color: #EF3341;
 }
 
 .modal-close::before {
-  transform: rotate(45deg);
+	transform: rotate(45deg);
 }
 
 .modal-close::after {
-  transform: rotate(-45deg);
+	transform: rotate(-45deg);
 }
 
 .container-modal {
@@ -708,7 +706,7 @@ input[type="radio"].visually-hidden{
 	width: 460px;
 	display: flex;
 	justify-content: space-between;
-	margin-top: 16px;
+	margin-top: 46px;
 	margin-bottom: 20px;
 }
 
@@ -731,7 +729,7 @@ input[type="radio"].visually-hidden{
 	border: none;
 	color: #a9a9a9;
 	border: 2px solid #d7dcde;
-	margin-top: 11px;
+	margin-top: 10px;
 	padding: 12px 15px;
 }
 
@@ -740,6 +738,10 @@ input[type="radio"].visually-hidden{
 	font-family: "PT Sans", Arial, sans-serif;
 	color: #999999;
 	font-size: 17px;
+}
+
+.tu-send {
+	margin-top: 37px;
 }
 
 .modal-letter button {
@@ -774,6 +776,24 @@ input[type="radio"].visually-hidden{
 	cursor: pointer;
 	outline: none; 
 }
+
+.modal-map {
+	width: 940px;
+	top: 15px;
+	left: 50%;
+	margin-left: -470px;
+	box-shadow: 0px 0px 25px -10px rgba(0, 0, 0, 0.75);
+	display: none;
+}
+
+.modal-map-wrapper {
+	position:relative;
+}
+
+.modal-map img {
+	margin-bottom: -5px;
+} 
+
 
 /*    //////////    Страница каталога      ///////////    */
 .choice {
@@ -1051,7 +1071,6 @@ input[type="radio"].visually-hidden{
 	display: flex;
 	flex-wrap: wrap;
 	padding: 0;
-	justify-content: space-between;
 	margin: 20px 0 43px 0;
 }
 
@@ -1066,6 +1085,8 @@ input[type="radio"].visually-hidden{
 .catalog-list img {
 	order: -1; 
 	margin-bottom: 8px;
+	width: 218px;
+	height: 170px;
 }
 
 .catalog-item {
@@ -1075,8 +1096,14 @@ input[type="radio"].visually-hidden{
 	border: 1px solid #e5e5e5;
 	border-radius: 2px;
 	margin-bottom: 20px;
+	margin-right: 20px;
 	position: relative;
 }
+
+.catalog-item:nth-child(3n) {
+	margin-right: 0;
+}
+
 
 .flag-new h3::after  {
 	position: absolute;
@@ -1111,7 +1138,6 @@ input[type="radio"].visually-hidden{
 	border: 20px solid white;
 	border-left-color: #ee3643;
 }
-
 
 .catalog-item-price {
 	margin: 0;
